--- a/package.json
+++ b/package.json
@@ -10,17 +10,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/material-bottom-tabs": "^6.2.2",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
+    "expo-app-loading": "~2.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-paper": "^4.12.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "react-navigation": "^4.4.4",
+    "react-navigation-header-buttons": "^9.0.1",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.66.13",
+    "@types/react-native": "~0.67.6",
     "typescript": "~4.3.5"
   },
   "private": true
